# cwxxsex

./: CMakeLists.txt  MyProxy.pl  MyServer.pl  Wo_Users.cpp  Wo_Users.hpp  activity.sql  basic_auth.pl  client1.pl  curent_users_id.php  detected.js  framework  main.cpp  page1.rb  posts  posts.cpp  rest_api.pl  secure.php  server.pl  smart1.html  statement1.h  tenhtml.html  test_image.py  testy.pl  update.php
PForums/: MANIFEST  Makefile.PL  config.yml  db.conf
PForums/lib/: PForums.pm
PForums/sessions/: YivFRgATYXP95agrL0Xx-Gb6s5Utepaa.yml
PForums/views/: action_me.tt  auth.tt  index.tt  me_page.tt  ok.tt  reg.tt  user_page.tt
PForums/views/layouts/: main.tt  yub.tt
backend/: package-lock.json  package.json
csocial/: CMakeLists.txt
csocial/include/: Server.h  crow_all.h
csocial/include/domain/: Student.h
csocial/include/infrastructure/: IdGenerator.h  IncrementalConcurrentIdGenerator.h  StudentController.h  StudentRepository.h
csocial/src/: CMakeLists.txt  Server.cpp  main.cpp
csocial/src/domain/: CMakeLists.txt  Student.cpp
csocial/src/infrastructure/: CMakeLists.txt  StudentController.cpp  StudentRepository.cpp
csocial/src/templates/: package.json
templates/: app.js  home.js  index.html  package-lock.json  package.json  server.js  server2.js  yub.js
templates/assets/: win.html
templates/views/: file_upload.pug
